# onebrc

./: .gitignore  Cargo.toml  README.md
resources/: test.csv  test.parquet
src/: main.rs
tools/: convert_csv_to_parquet.rs  create_csv.rs
